implementados endpoints de factura